# Re-Fit

./: .env.example  .gitignore  CLAUDE.md  MANUAL_EVAL.md  Makefile  PROJECT_CONTEXT.md  README.md  WATCHED_BOARDS.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0edc54022e3a_add_bullet_embeddings_table.py  33b93f72cf62_add_uploads_table.py  4f6de2cfcf67_initial_schema.py  53c73eff897d_add_answer_profile_and_short_answers.py  71f1f6f1d3d4_add_pipeline_runs_table.py  9bdf8db92f2d_add_phase2_prose_artifacts.py  (+9 more)
app/: config.py  db.py  main.py  worker.py
app/data/: __init__.py  (+1 more)
scripts/: _llm_guard.py  cleanup_out_of_scope_matches.py  eval_phase1.py  eval_phase3.py  eval_phase4.py  make_synthetic_corpus.py  make_template_previews.py  seed.py  seed_apply_kit.py  seed_dashboard.py  seed_job_feed.py
tests/: conftest.py  test_answer_profile.py  test_apply_kit.py  test_ats_fields.py  test_auth.py  test_cover_letter.py  test_dashboard_api.py  test_diffing.py  test_embeddings.py  test_extract.py  test_fabrication.py  test_followup.py  test_ingestion_digest.py  test_jd_extraction.py  test_job_target_from_posting.py  test_kit.py  test_llm_fallback.py  test_matching.py  test_parse_integration.py  test_phase0_exit.py  test_pipeline.py  test_postings.py  test_render.py  test_resume_schema.py  test_score.py  test_short_answers.py  test_source_registry.py  test_sources.py  test_tailor_integration.py  test_templates.py  test_version_history.py
web/: package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
(+182 files in other folders)
